--- a/Destapa-Cañerias/Destapacaños-Cerca-De-Mi-Ubicación.html
+++ b/Destapa-Cañerias/Destapacaños-Cerca-De-Mi-Ubicación.html
@@ -142,27 +142,27 @@ Destapacaños Cerca De Mi Ubicación
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Alcohol-boricado-como-se-usa.html">Alcohol boricado como se usa </a> 
+       <a href="../Servicios/Como-destapar-el-baño-con-bicarbonato-y-vinagre.html">Como destapar el baño con bicarbonato y vinagre </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Harpic-destapacaños-inodoro.html">Harpic destapacaños inodoro </a> 
+       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Servicio-Destapa-Cañerias.html">Servicio Destapa Cañerias </a> 
+       <a href="../Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-productos-argentina.html">Destapa cañerias productos argentina </a> 
+       <a href="../Servicios/Destapaciones-de-cañerias-con-maquinas.html">Destapaciones de cañerias con maquinas </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-palermo.html">Destapaciones de cañerias palermo </a> 
+       <a href="../Servicios/Plomeria-Destapar-Cañerias-en-Palermo.html">Plomeria Destapar Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 
@@ -225,47 +225,32 @@ Destapacaños Cerca De Mi Ubicación
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-cañerias-con-bicarbonato-de-sodio.html">Destapar cañerias con bicarbonato de sodio </a> 
+       <a href="../Servicios/La-ville-de-boulogne-sur-mer.html">La ville de boulogne sur mer </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Guia-destapacaños-pretul.html">Guia destapacaños pretul </a> 
+       <a href="../Servicios/Como-limpiar-el-inodoro-del-sarro.html">Como limpiar el inodoro del sarro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-para-destapar-el-inodoro-sin-sopapa.html">Como hacer para destapar el inodoro sin sopapa </a> 
+       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Como-se-puede-destapar-el-baño-sin-destapacaños.html">Como se puede destapar el baño sin destapacaños </a> 
+       <a href="../Destapa-Cañerias/Harpic-destop-instrucciones-de-uso.html">Harpic destop instrucciones de uso </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapar-desague-de-cocina.html">Destapar desague de cocina </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-viejas.html">Remedios caseros para destapar cañerias viejas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Maquina-para-destapar-cañerias-cuanto-cuesta.html">Maquina para destapar cañerias cuanto cuesta </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-miramar.html">Destapaciones de cloacas miramar </a> 
+       <a href="../Servicios/Gusano-destapacaños-home-depot.html">Gusano destapacaños home depot </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -275,7 +260,22 @@ Destapacaños Cerca De Mi Ubicación
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
+       <a href="../Servicios/Destapar-Cañerias-De-Pvc-en-Palermo.html">Destapar Cañerias De Pvc en Palermo </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Como-desatascar-una-tuberia.html">Como desatascar una tuberia </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapacaños-Cerca-De-Mi-Ubicación.html">Destapacaños Cerca De Mi Ubicación </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Maquina-para-destapar-cañerias-cuanto-cuesta.html">Maquina para destapar cañerias cuanto cuesta </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
